[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
tokio = { version = "1.17.0", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.11"
tracing = "0.1.34"
anyhow = "1.0.57"
include_dir = "0.7.2"
r2d2 = "0.8.9"
r2d2_sqlite = "0.20.0"
chrono = { version = "0.4.19", features=["clock"], default-features = false }
chrono-tz = { version = "0.6.1", default-features = false}
fuzzy-matcher = { version = "0.3.7", features=["compact"] }